enhance resource deletion flow. (#111)
