# pkg/services/resource.go
@@ -214,20 +214,23 @@ func (s *sqlResourceService) UpdateStatus(ctx context.Context, resource *api.Res
 	return updated, true, nil
 }
 
-// MarkAsDeleting marks the resource as deleting by setting the deleted_at timestamp.
+// MarkAsDeleting marks the resource as deleting by setting the delete_at timestamp.
 // The Resource Deletion Flow:
 // 1. User requests deletion
-// 2. Maestro marks resource as deleting, adds delete event to DB
+// 2. Maestro marks resource as deleting by soft delete, adds delete event to DB
 // 3. Maestro handles delete event and sends CloudEvent to work-agent
 // 4. Work-agent deletes resource, sends CloudEvent back to Maestro
-// 5. Maestro deletes resource from DB
+// 5. Maestro hard deletes resource from DB
 func (s *sqlResourceService) MarkAsDeleting(ctx context.Context, id string) *errors.ServiceError {
-	_, err := s.events.Create(ctx, &api.Event{
+	if err := s.resourceDao.Delete(ctx, id, false); err != nil {
+		return handleDeleteError("Resource", errors.GeneralError("Unable to delete resource: %s", err))
+	}
+
+	if _, err := s.events.Create(ctx, &api.Event{
 		Source:    "Resources",
 		SourceID:  id,
 		EventType: api.DeleteEventType,
-	})
-	if err != nil {
+	}); err != nil {
 		return handleDeleteError("Resource", err)
 	}
 
@@ -235,7 +238,7 @@ func (s *sqlResourceService) MarkAsDeleting(ctx context.Context, id string) *err
 }
 
 func (s *sqlResourceService) Delete(ctx context.Context, id string) *errors.ServiceError {
-	if err := s.resourceDao.Delete(ctx, id); err != nil {
+	if err := s.resourceDao.Delete(ctx, id, true); err != nil {
 		return handleDeleteError("Resource", errors.GeneralError("Unable to delete resource: %s", err))
 	}
 
